# Techno_Ed

./: README.md  config.py  db_connection.py  main.py  pyproject.toml  requirements.txt
bl_models/: themes_bl.py  user_bl.py  vacancy_bl.py
dal_models/: themes_dal.py  user_dal.py  vacancy_dal.py
sber_gigachat/: __init__.py  courses.json  embedding.py  prompts.py  utils.py
telegram_bot/: __init__.py  handlers.py  keyboards.py  text.py
