[tool.poetry]
name = "telegarm-bot-hack21"
version = "0.1.0"
description = ""
authors = ["Gapenysh <bulathai2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
gigachain-community = "^0.2.16.post3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
